--- a/index.html
+++ b/index.html
@@ -251,14 +251,32 @@ let selectedMemberId = null;
 //  API
 // ═══════════════════════════════════════════
 async function api(method, path, body) {
-  const opts = { method, headers:{'Content-Type':'application/json'} };
+  const opts = { method, headers: { "Content-Type": "application/json" } };
   if (body) opts.body = JSON.stringify(body);
-  return (await fetch('/api'+path, opts)).json();
+
+  const res = await fetch("/api" + path, opts);
+
+  if (!res.ok) {
+    const txt = await res.text().catch(() => "");
+    throw new Error(`${method} /api${path} failed: ${res.status} ${res.statusText} ${txt}`.slice(0, 300));
+  }
+
+  return res.json();
 }
+
 async function loadFamily() {
-  familyData = await api('GET','/family');
-  if (!familyData.settings) familyData.settings = { title:'Our Family Tree', subtitle:'' };
-  renderTree(); updateTitle();
+  try {
+    familyData = await api("GET", "/family");
+    if (!familyData.settings) familyData.settings = { title: "Our Family Tree", subtitle: "" };
+    renderTree();
+    updateTitle();
+  } catch (e) {
+    console.error(e);
+    showToast("Failed to load data (check console)");
+    familyData = { members: [], relationships: [], settings: { title: "Our Family Tree", subtitle: "" } };
+    renderTree();
+    updateTitle();
+  }
 }
 function updateTitle() {
   document.getElementById('treeTitle').textContent = familyData.settings.title || 'Our Family Tree';
@@ -424,17 +442,6 @@ function layoutTree() {
   const members = familyData.members;
   const pcRels = rels.filter(r => r.type === 'parent-child');
   const spRels = rels.filter(r => r.type === 'spouse');
-
-  // Build maps
-  const childrenOf = {}, parentsOf = {}, spousesOf = {};
-  pcRels.forEach(r => {
-    (childrenOf[r.person1] = childrenOf[r.person1] || []).push(r.person2);
-    (parentsOf[r.person2] = parentsOf[r.person2] || []).push(r.person1);
-  });
-  spRels.forEach(r => {
-    (spousesOf[r.person1] = spousesOf[r.person1] || []).push(r.person2);
-    (spousesOf[r.person2] = spousesOf[r.person2] || []).push(r.person1);
-  });
 
   // ─────────────────────────────────────────
   //  GENERATION (ROW) ASSIGNMENT — robust
