--- a/public/index.html
+++ b/public/index.html
@@ -439,7 +439,18 @@
           <div class="form-group"><label>Birth Date</label><input type="date" id="birthDate"></div>
           <div class="form-group"><label>Death Date</label><input type="date" id="deathDate"></div>
         </div>
-
+		<div class="form-group">
+		  <label>Generation (override)</label>
+		  <select id="generationOverride">
+			<option value="">Auto</option>
+			<option value="0">Top (Oldest)</option>
+			<option value="1">Row 2</option>
+			<option value="2">Row 3</option>
+			<option value="3">Row 4</option>
+			<option value="4">Row 5</option>
+		  </select>
+		  <div class="help-text">Force this person to render in a specific generation row.</div>
+		</div>
         <div class="photo-preview-row">
           <div class="form-group">
             <label>Photo URL</label>
@@ -614,6 +625,7 @@
     //  MEMBER CRUD
     // ═══════════════════════════════════════════
     function openAddMember() {
+	  document.getElementById('generationOverride').value = '';
       document.getElementById('memberModalTitle').textContent = 'Add Family Member';
       ['memberId','firstName','lastName','maidenName','birthDate','deathDate','photoUrl','bio'].forEach(id => {
         document.getElementById(id).value = '';
@@ -628,6 +640,8 @@
     function openEditMember(id) {
       const m = familyData.members.find(x => x.id === id);
       if (!m) return;
+	  document.getElementById('generationOverride').value =
+		(m.generationOverride === 0 || m.generationOverride) ? String(m.generationOverride) : '';
       document.getElementById('memberModalTitle').textContent = 'Edit ' + (m.firstName || '');
       document.getElementById('memberId').value = m.id;
       ['firstName','lastName','maidenName','gender','birthDate','deathDate','photoUrl','bio'].forEach(f => {
@@ -643,6 +657,8 @@
     }
 
     async function saveMember() {
+	  const genRaw = document.getElementById('generationOverride').value;
+      const generationOverride = genRaw === '' ? null : Number(genRaw);
       const id = document.getElementById('memberId').value;
       const d = {
         firstName: document.getElementById('firstName').value.trim(),
@@ -652,7 +668,8 @@
         birthDate: document.getElementById('birthDate').value,
         deathDate: document.getElementById('deathDate').value,
         photoUrl: document.getElementById('photoUrl').value.trim(),
-        bio: document.getElementById('bio').value.trim()
+        bio: document.getElementById('bio').value.trim(),
+		generationOverride
       };
 
       if (!d.firstName) { showToast('First name required'); return; }
@@ -993,38 +1010,93 @@
       const pcRels = rels.filter(r => r.type === 'parent-child');
       const spRels = rels.filter(r => r.type === 'spouse');
 
-      // ─────────────────────────────────────────
-      // GENERATION DEPTH ASSIGNMENT
-      // ─────────────────────────────────────────
-      const depth = {};
-      members.forEach(m => depth[m.id] = 0);
-      const MAX_ITERS = Math.max(5, members.length * 5);
-
-      for (let i = 0; i < MAX_ITERS; i++) {
-        let changed = false;
-
-        // spouses same generation
-        spRels.forEach(r => {
-          const a = r.person1, b = r.person2;
-          const mx = Math.max(depth[a] ?? 0, depth[b] ?? 0);
-          if (depth[a] !== mx) { depth[a] = mx; changed = true; }
-          if (depth[b] !== mx) { depth[b] = mx; changed = true; }
-        });
-
-        // children below parents
-        pcRels.forEach(r => {
-          const p = r.person1, c = r.person2;
-          const want = (depth[p] ?? 0) + 1;
-          if ((depth[c] ?? 0) < want) { depth[c] = want; changed = true; }
-        });
-
-        if (!changed) break;
+    // ─────────────────────────────────────────
+    //  GENERATION (ROW) ASSIGNMENT — with manual overrides
+    //   - generationOverride (number) anchors a person to a row
+    //   - spouses share row (propagate anchor across spouse graph)
+    //   - parent-child enforces child >= parent + 1
+    // ─────────────────────────────────────────
+    const depth = {};
+    members.forEach(m => depth[m.id] = 0);
+  
+    // 1) Seed anchors
+    const anchor = {}; // id -> anchoredDepth
+    members.forEach(m => {
+      if (m.generationOverride === 0 || m.generationOverride) {
+        const v = Number(m.generationOverride);
+        if (!Number.isNaN(v) && v >= 0) anchor[m.id] = v;
       }
-
-      // normalize min depth to 0
-      const minD = Math.min(...Object.values(depth));
-      Object.keys(depth).forEach(id => depth[id] -= minD);
-      const maxD = Math.max(...Object.values(depth));
+    });
+  
+    // 2) Build spouse adjacency
+    const spouseAdj = {};
+    spRels.forEach(r => {
+      (spouseAdj[r.person1] = spouseAdj[r.person1] || []).push(r.person2);
+      (spouseAdj[r.person2] = spouseAdj[r.person2] || []).push(r.person1);
+    });
+  
+    // 3) Propagate anchors through spouse groups (if any member anchored, whole group anchored to max)
+    const visited = new Set();
+    Object.keys(anchor).forEach(startId => {
+      if (visited.has(startId)) return;
+  
+      // BFS spouse component
+      const q = [startId];
+      const component = [];
+      visited.add(startId);
+  
+      while (q.length) {
+        const cur = q.shift();
+        component.push(cur);
+        (spouseAdj[cur] || []).forEach(nxt => {
+          if (!visited.has(nxt)) {
+            visited.add(nxt);
+            q.push(nxt);
+          }
+        });
+      }
+  
+      // Component anchor = max of anchors in the component
+      const compAnchor = Math.max(...component.map(id => anchor[id]).filter(v => v !== undefined));
+      component.forEach(id => { anchor[id] = compAnchor; });
+    });
+  
+    // 4) Initialize depth with anchors
+    Object.keys(anchor).forEach(id => { depth[id] = Math.max(depth[id], anchor[id]); });
+  
+    const MAX_ITERS = members.length * 8;
+  
+    for (let i = 0; i < MAX_ITERS; i++) {
+      let changed = false;
+  
+      // spouses same generation: pull both up to max of the two (never pull down)
+      spRels.forEach(r => {
+        const a = r.person1, b = r.person2;
+        const mx = Math.max(depth[a] ?? 0, depth[b] ?? 0);
+        if (depth[a] !== mx) { depth[a] = mx; changed = true; }
+        if (depth[b] !== mx) { depth[b] = mx; changed = true; }
+      });
+  
+      // honor anchors (never allow below anchor)
+      Object.entries(anchor).forEach(([id, ad]) => {
+        if ((depth[id] ?? 0) < ad) { depth[id] = ad; changed = true; }
+      });
+  
+      // parent-child constraints
+      pcRels.forEach(r => {
+        const p = r.person1, c = r.person2;
+        const want = (depth[p] ?? 0) + 1;
+        if ((depth[c] ?? 0) < want) { depth[c] = want; changed = true; }
+      });
+  
+      if (!changed) break;
+    }
+  
+    // normalize so min depth becomes 0 (keep relative rows compact)
+    const minD = Math.min(...Object.values(depth));
+    Object.keys(depth).forEach(id => depth[id] -= minD);
+  
+    const maxD = Math.max(...Object.values(depth));
 
       // ─────────────────────────────────────────
       // BUILD COUPLE/SINGLE UNITS PER GENERATION
